force-app/main/default/objects/QuoteLineItem/fields/Configuration_Product__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Product</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>