force-app/main/default/objects/QuoteLineItem/fields/ConfigurationOption__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Option</label>
    <referenceTo>Configuration_Option__c</referenceTo>
    <relationshipLabel>QuoteLines</relationshipLabel>
    <relationshipName>QuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>