force-app/main/default/objects/QuoteLineItem/fields/ConfigurationPlan__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Plan</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>QuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>