force-app/main/default/objects/QuoteLineItem/fields/ConfigurationProduct__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Product</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>QuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>