force-app/main/default/objects/QuoteLineItem/fields/Contracted_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Sales_Price__c</fullName>
    <description>Sales price that&apos;s set when contract is sent</description>
    <inlineHelpText>Sales price that&apos;s set when contract is sent</inlineHelpText>
    <label>Contracted Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>