force-app/main/default/objects/QuoteLineItem/fields/ContractedPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractedPrice__c</fullName>
    <description>Sales price that&apos;s set when contract is sent</description>
    <inlineHelpText>Sales price that&apos;s set when contract is sent</inlineHelpText>
    <label>Contracted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>