force-app/main/default/objects/QuoteLineItem/fields/CostType__c.field-meta.xml
<CustomField>
    <fullName>CostType__c</fullName>
    <description>Line Item Cost Type</description>
    <inlineHelpText>Line Item Cost Type</inlineHelpText>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Cost_Types</valueSetName>
    </valueSet>
</CustomField>