force-app/main/default/objects/QuoteLineItem/fields/Factory_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Factory_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Factory Multiplier OLD</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>