force-app/main/default/objects/QuoteLineItem/fields/fxBasePrice__c.field-meta.xml
<CustomField>
    <fullName>fxBasePrice__c</fullName>
    <description>Base Price * Sales Multiplier</description>
    <inlineHelpText>Base Price</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>