force-app/main/default/objects/QuoteLineItem/fields/fxCost__c.field-meta.xml
<CustomField>
    <fullName>fxCost__c</fullName>
    <description>Calculated Result of Base Price * Cost Multiplier * Quantity</description>
    <formula>IF(Cost_Multiplier__c &gt; 0,  fxUnitCost__c *  Quantity, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Line Item Cost</inlineHelpText>
    <label>fxCost</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>