force-app/main/default/objects/QuoteLineItem/fields/fxCostCategory__c.field-meta.xml
<CustomField>
    <fullName>fxCostCategory__c</fullName>
    <description>Lookup of Cost Category from Product2</description>
    <formula>Text(Product2.Cost_Category__c)</formula>
    <inlineHelpText>Lookup of Cost Category from Product2</inlineHelpText>
    <label>Product Cost Category</label>
    <type>Text</type>
</CustomField>