force-app/main/default/objects/QuoteLineItem/fields/fxCostOfGoodsSold__c.field-meta.xml
<CustomField>
    <fullName>fxCostOfGoodsSold__c</fullName>
    <formula>(fxFactory__c + fxCost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost of Goods Sold (COGS)</inlineHelpText>
    <label>Cost Of Goods Sold OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>