force-app/main/default/objects/QuoteLineItem/fields/fxCostType__c.field-meta.xml
<CustomField>
    <fullName>fxCostType__c</fullName>
    <description>Lookup to Product2 Cost Type</description>
    <formula>TEXT(Product2.Cost_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Cost Type</label>
    <type>Text</type>
</CustomField>