force-app/main/default/objects/QuoteLineItem/fields/fxDiscount__c.field-meta.xml
<CustomField>
    <fullName>fxDiscount__c</fullName>
    <formula>IF(AND(UnitPrice&gt;0,fxUnitSalesPrice__c&gt;0),(1 - ( UnitPrice/fxUnitSalesPrice__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxDiscount</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>