force-app/main/default/objects/QuoteLineItem/fields/fxFactory__c.field-meta.xml
<CustomField>
    <fullName>fxFactory__c</fullName>
    <formula>IF(Factory_Multiplier__c &gt; 0, fxUnitFactoryPrice__c *  Quantity, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxFactory</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>