force-app/main/default/objects/QuoteLineItem/fields/fxGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>fxGrossProfit__c</fullName>
    <formula>fxRevenue__c -  fxCostOfGoodsSold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit = Revenue - Cost of Goods Sold</inlineHelpText>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>