force-app/main/default/objects/QuoteLineItem/fields/fxInstallation__c.field-meta.xml
<CustomField>
    <fullName>fxInstallation__c</fullName>
    <formula>Product2.Installation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation</label>
    <type>Checkbox</type>
</CustomField>