force-app/main/default/objects/QuoteLineItem/fields/fxLineTotalPriceInclTax__c.field-meta.xml
<CustomField>
    <fullName>fxLineTotalPriceInclTax__c</fullName>
    <description>Total Price per Line with Tax</description>
    <formula>(UnitPrice * Quantity)*(1+ Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price per Line with Tax</inlineHelpText>
    <label>Line Total Price with Tax</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>