force-app/main/default/objects/QuoteLineItem/fields/fxLineTotalPriceNoTax__c.field-meta.xml
<CustomField>
    <fullName>fxLineTotalPriceNoTax__c</fullName>
    <description>Total Price per Line without Tax</description>
    <formula>UnitPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price per Line without Tax</inlineHelpText>
    <label>Line Total Price without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>