force-app/main/default/objects/QuoteLineItem/fields/fxList__c.field-meta.xml
<CustomField>
    <fullName>fxList__c</fullName>
    <formula>If( Sales_Multiplier__c &gt; 0,  fxPricePerUnit__c  * Quantity, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxList</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>