force-app/main/default/objects/QuoteLineItem/fields/fxPricePerUnit__c.field-meta.xml
<CustomField>
    <fullName>fxPricePerUnit__c</fullName>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxUnitPrice</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>