force-app/main/default/objects/QuoteLineItem/fields/fxProductCode__c.field-meta.xml
<CustomField>
    <fullName>fxProductCode__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>