force-app/main/default/objects/QuoteLineItem/fields/fxProductGroup__c.field-meta.xml
<CustomField>
    <fullName>fxProductGroup__c</fullName>
    <description>Shows the Product Group of the Product related to the Quote Line Item</description>
    <formula>TEXT(Product2.Product_Group__c)</formula>
    <inlineHelpText>The Product Group of the Product related to the Quote Line Item</inlineHelpText>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>