force-app/main/default/objects/QuoteLineItem/fields/fxRevenue__c.field-meta.xml
<CustomField>
    <fullName>fxRevenue__c</fullName>
    <formula>fxSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue (Sales Price)</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>