force-app/main/default/objects/QuoteLineItem/fields/fxSales__c.field-meta.xml
<CustomField>
    <fullName>fxSales__c</fullName>
    <description>The ListPrice calculated from Base Price with a Sales Multiplier</description>
    <formula>IF( Sales_Multiplier__c &gt; 0,   fxUnitSalesPrice__c *  Quantity, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Price on the PriceList aka List Price</inlineHelpText>
    <label>fxSales</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>