force-app/main/default/objects/QuoteLineItem/fields/fxSalesMargin__c.field-meta.xml
<CustomField>
    <fullName>fxSalesMargin__c</fullName>
    <formula>IF(fxRevenue__c&gt;0,(fxGrossProfit__c / fxRevenue__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Sales Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>