force-app/main/default/objects/QuoteLineItem/fields/fxSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>fxSerialNumber__c</fullName>
    <description>SerialNumber or RVN Lookup</description>
    <formula>Configuration_Option__r.RVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN</label>
    <type>Text</type>
</CustomField>