force-app/main/default/objects/QuoteLineItem/fields/fxUnitFactoryPrice__c.field-meta.xml
<CustomField>
    <fullName>fxUnitFactoryPrice__c</fullName>
    <description>Factory Price for an Item per Unit</description>
    <formula>IF ( Min_Sales_Price__c &gt;0 , 
Min_Sales_Price__c + (Min_Sales_Price__c *( Factory_Multiplier__c -1)),
Base_Price__c + (Base_Price__c *( Factory_Multiplier__c -1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxUnitFactoryPrice</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>