force-app/main/default/objects/QuoteLineItem/fields/Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price__c</fullName>
    <inlineHelpText>Gross Price</inlineHelpText>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>