force-app/main/default/objects/QuoteLineItem/fields/hasInstallationTime__c.field-meta.xml
<CustomField>
    <fullName>hasInstallationTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if Installation is required</description>
    <inlineHelpText>Indicates if Installation is required</inlineHelpText>
    <label>hasInstallationTime</label>
    <type>Checkbox</type>
</CustomField>