force-app/main/default/objects/QuoteLineItem/fields/hasProductionTime__c.field-meta.xml
<CustomField>
    <fullName>hasProductionTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if Production is required</description>
    <inlineHelpText>Indicates if Production is required</inlineHelpText>
    <label>hasProductionTime</label>
    <type>Checkbox</type>
</CustomField>