force-app/main/default/objects/QuoteLineItem/fields/hasVolumeReduction__c.field-meta.xml
<CustomField>
    <fullName>hasVolumeReduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volume Reduction OLD</label>
    <type>Checkbox</type>
</CustomField>