force-app/main/default/objects/QuoteLineItem/fields/Installation_Product__c.field-meta.xml
<CustomField>
    <fullName>Installation_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Product</label>
    <type>Checkbox</type>
</CustomField>