force-app/main/default/objects/QuoteLineItem/fields/isInstallation__c.field-meta.xml
<CustomField>
    <fullName>isInstallation__c</fullName>
    <description>Set Value to 1 if Installation applies</description>
    <formula>If(fxInstallation__c ,true,false)</formula>
    <label>isInstallation</label>
    <type>Checkbox</type>
</CustomField>