force-app/main/default/objects/QuoteLineItem/fields/MainProductCode__c.field-meta.xml
<CustomField>
    <fullName>MainProductCode__c</fullName>
    <label>Sales Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>