force-app/main/default/objects/QuoteLineItem/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Quantity of an Item per Unit of Measure</description>
    <inlineHelpText>The Maximum Quantity of an Item per Product Group on a single Offer</inlineHelpText>
    <label>Max Quantity OLD</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>