force-app/main/default/objects/QuoteLineItem/fields/MinimumSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>MinimumSalesPrice__c</fullName>
    <inlineHelpText>Minimum Sales Price</inlineHelpText>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>