force-app/main/default/objects/QuoteLineItem/fields/MultiplierCost__c.field-meta.xml
<CustomField>
    <fullName>MultiplierCost__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cost Multiplier</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>