force-app/main/default/objects/QuoteLineItem/fields/MultiplierFactory__c.field-meta.xml
<CustomField>
    <fullName>MultiplierFactory__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Factory Multiplier</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>