force-app/main/default/objects/QuoteLineItem/fields/MultiplierSales__c.field-meta.xml
<CustomField>
    <fullName>MultiplierSales__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Sales Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>