force-app/main/default/objects/QuoteLineItem/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <description>Shows the Salestori Offer Number related to the QuoteLineItem</description>
    <formula>Quote.OfferNumber__c</formula>
    <inlineHelpText>The Salestori Offer Number related to the QuoteLineItem</inlineHelpText>
    <label>Offer Number</label>
    <type>Text</type>
</CustomField>