force-app/main/default/objects/QuoteLineItem/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Shows the Oportunity Number related to the QuoteLineItem</description>
    <formula>Quote.Opportunity.Opportunity_Number__c</formula>
    <inlineHelpText>The Oportunity Number related to the QuoteLineItem</inlineHelpText>
    <label>Opportunity Number OLD</label>
    <type>Text</type>
</CustomField>