force-app/main/default/objects/QuoteLineItem/fields/PriceBase__c.field-meta.xml
<CustomField>
    <fullName>PriceBase__c</fullName>
    <description>Base Price * Sales Multiplier</description>
    <inlineHelpText>Base Price</inlineHelpText>
    <label>Base Price OLD</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>