force-app/main/default/objects/QuoteLineItem/fields/PriceFactory__c.field-meta.xml
<CustomField>
    <fullName>PriceFactory__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Factory Price</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>