force-app/main/default/objects/QuoteLineItem/fields/PriceListEntry__c.field-meta.xml
<CustomField>
    <fullName>PriceListEntry__c</fullName>
    <label>PriceListEntry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>