force-app/main/default/objects/QuoteLineItem/fields/PriceSales__c.field-meta.xml
<CustomField>
    <fullName>PriceSales__c</fullName>
    <description>Actual Sales Price (aka Selling Price)</description>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>