force-app/main/default/objects/QuoteLineItem/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Cost</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>