force-app/main/default/objects/QuoteLineItem/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <inlineHelpText>Third Level Grouping of Products and Services</inlineHelpText>
    <label>Product Item OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Items</valueSetName>
    </valueSet>
</CustomField>