force-app/main/default/objects/QuoteLineItem/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <inlineHelpText>First Level Grouping of Products and Services</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Categories</valueSetName>
    </valueSet>
</CustomField>