force-app/main/default/objects/QuoteLineItem/fields/ProductModel__c.field-meta.xml
<CustomField>
    <fullName>ProductModel__c</fullName>
    <description>Reference to the Product Model for this Line Item</description>
    <label>Product Model OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>