force-app/main/default/objects/QuoteLineItem/fields/ProductSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductSerialNumber__c</fullName>
    <description>The Serial Number or RVN of the Product</description>
    <externalId>true</externalId>
    <label>Product Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>