force-app/main/default/objects/QuoteLineItem/fields/ProductSubType__c.field-meta.xml
<CustomField>
    <fullName>ProductSubType__c</fullName>
    <inlineHelpText>Third Level Grouping of Products and Services</inlineHelpText>
    <label>Product Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Items</valueSetName>
    </valueSet>
</CustomField>