force-app/main/default/objects/QuoteLineItem/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <description>Shows the Quote Number related to the QuoteLineItem</description>
    <formula>Quote.QuoteNumber</formula>
    <inlineHelpText>The Quote Number related to the QuoteLineItem</inlineHelpText>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>