force-app/main/default/objects/QuoteLineItem/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <description>Autogenerated RVN for all Plan Types retrieved from related Configuration Option</description>
    <formula>Configuration_Option__r.RVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN OLD</label>
    <type>Text</type>
</CustomField>