force-app/main/default/objects/QuoteLineItem/fields/Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Margin__c</fullName>
    <formula>IF(Revenue__c&gt;0,(Gross_Profit__c / Revenue__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Margin OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>